Setup auth for be and fe

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -134,5 +134,9 @@
 
 html {
   letter-spacing: var(--tracking-wide);
-  font-family: Lucida
+  font-family: Lucida;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
